added transparent and sticky footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,25 +12,28 @@ body {
     background-attachment: fixed;
     background-position: 50%;
 }
-header {
+header, footer{
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
     position: sticky;
     top: 0;
     z-index: 9999;
+}
+header{
     background-image: url(../images/Binary-Background-large.jpg);
     background-size: 100%;
     background-attachment: fixed;
     background-position: 50%;
 }
-#header-list {
-    width: 100%;
-    position: sticky;
+header {
     top: 0;
-    z-index: 9999;
 }
-#header-list ul {
+footer {
+    bottom: 0;
+}
+nav {
+    width: 100%;
+}
+nav ul {
     display: flex;
     justify-content: space-around;
     list-style: none;
@@ -48,6 +51,46 @@ header {
 #header-list ul li a:hover {
     background-color: lightcyan;
 }
+#footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 80%;
+    margin: 0 auto 10px auto;
+    background-color: var(--translucent-blue);
+    border-radius: 20px;
+}
+#footer-title {
+    display: flex;
+    width: 25%;
+    justify-content: center;
+    align-items: center;
+}
+#footer-title h2 {
+    display: inline;
+    font-size: 28px;
+}
+#footer-list {
+    width: 75%;
+}
+#footer-list ul {
+    display: flex;
+    justify-content: space-around;
+    margin: 12px 0;
+}
+#footer-list li {
+    font-size: 24px;
+}
+#footer-list li a {
+    background-color: rgba(224,255,255,0.6);
+    padding: 5px;
+    border-radius: 15px;
+    color: black;
+    text-decoration: none;
+}
+#footer-list li a:hover {
+    background-color: lightcyan;
+}
 #name-box {
     display: flex;
     justify-content: center;
@@ -61,9 +104,11 @@ header {
     display: inline;
     font-size: 32px;
 }
-#grid-container {
+#flex-container {
     width: 80%;
     margin: 50px auto;
+    display: flex;
+    flex-direction: column;
 }
 .grid-box {
     text-align: center;
@@ -74,8 +119,10 @@ header {
     display: flex;
     justify-content: center;
     background-color: var(--translucent-blue);
+    margin: 15px auto;
+    padding: 30px auto;
 }
-.title-box h2 {
+.title-box > * {
     font-size: 28px;
 }
 #about-me img, #work img, #contact-me img {
