--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 :root {
     --translucent-blue: rgba(224,255,255,0.55);
+    --translucent-blue-text: rgba(224,255,255,0.75);
+    --translucent-blue-button: rgba(224,255,255,0.65);
 }
 * {
     margin: 0;
@@ -17,8 +19,6 @@ header, footer{
     position: sticky;
     top: 0;
     z-index: 9999;
-}
-header{
     background-image: url(../images/Binary-Background-large.jpg);
     background-size: 100%;
     background-attachment: fixed;
@@ -44,7 +44,7 @@ nav ul {
     text-decoration: none;
     color: black;
     font-size: 22px;
-    background-color: var(--translucent-blue);
+    background-color: var(--translucent-blue-text);
     padding: 10px;
     border-radius: 20px;
 }
@@ -57,7 +57,7 @@ nav ul {
     justify-content: space-between;
     width: 80%;
     margin: 0 auto 10px auto;
-    background-color: var(--translucent-blue);
+    background-color: var(--translucent-blue-text);
     border-radius: 20px;
 }
 #footer-title {
@@ -80,11 +80,12 @@ nav ul {
 }
 #footer-list li {
     font-size: 24px;
+    font-weight: bold;
 }
 #footer-list li a {
-    background-color: rgba(224,255,255,0.6);
+    background-color: var(--translucent-blue-button);
     padding: 5px;
-    border-radius: 15px;
+    border-radius: 20px;
     color: black;
     text-decoration: none;
 }
@@ -94,11 +95,11 @@ nav ul {
 #name-box {
     display: flex;
     justify-content: center;
-    width: 50%;
-    background-color: var(--translucent-blue);
+    width: 80%;
+    background-color: var(--translucent-blue-text);
     margin: 30px auto;
-    padding: 20px 0px;
-    border-radius: 25px
+    padding: 10px 0px;
+    border-radius: 20px;
 }
 #name-box h1 {
     display: inline;
@@ -106,26 +107,130 @@ nav ul {
 }
 #flex-container {
     width: 80%;
-    margin: 50px auto;
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
 }
-.grid-box {
-    text-align: center;
+.background-box {
+    display: grid;
+    background-color: var(--translucent-blue);
+    border-radius: 20px;
+    padding: 10px;
+}
+#about-me .background-box {
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: repeat(2, 1fr);
+}
+#work .background-box {
+    grid-template-columns: 2fr 4fr repeat(2, 3fr);
+    grid-template-rows: 325px 325px 370px;
 }
 .title-box {
-    border-bottom: 2px solid black;
     width: 25%;
     display: flex;
     justify-content: center;
-    background-color: var(--translucent-blue);
+    background-color: var(--translucent-blue-text);
+    border-radius: 20px;
     margin: 15px auto;
     padding: 30px auto;
+    grid-column: 1/-1;
+    grid-row: 1/2;
 }
 .title-box > * {
     font-size: 28px;
 }
-#about-me img, #work img, #contact-me img {
+#about-me {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 5fr;
+}
+#about-me .img-box {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+}
+#about-me .img-box img{
+    border-radius: 20px;
     max-height: 300px;
-    border-radius: 35px;
+}
+#work .tech-box {
+    display: flex;
+    grid-column: 1/2;
+    align-items: center;
+    justify-content: flex-start;
+}
+#work .tech-box h3 {
+    font-size: 28px;
+}
+#work h4 {
+    font-size: 24px;
+}
+.tech-box, .primary-project, .secondary-project {
+    border-bottom: 5px solid darkmagenta;
+}
+.primary-project {
+    display: grid;
+    grid-template-rows: 40px 275px;
+}
+.secondary-project {
+    display: grid;
+    grid-template-rows: 40px 215px 60px;
+}
+.primary-project .web-project {
+    display: grid;
+    grid-template-rows: 40px 275px 40px;
+}
+.secondary-project .web-project {
+    display: grid;
+    grid-template-rows: 40px 215px 40px 60px;
+}
+.primary-project .img-box, .secondary-project .img-box {
+    display: flex;
+    justify-content: center;
+}
+.project-box {
+    display: flex;
+    justify-content: center;
+}
+.project-box h4 {
+    margin: auto;
+}
+.img-box a img {
+    border-radius: 20px;
+    height: 100%;
+}
+.primary-project .img-box {
+    grid-row: span 2;
+}
+.primary-project .img-box a img{
+    max-height: 275px;
+}
+.secondary-project .img-box a img {
+    max-height: 225px;
+}
+.secondary-project .img-box {
+    grid-row: span 1;
+}
+.web-link {
+    display: flex;
+    justify-content: center;
+}
+.web-link a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+}
+.para-box {
+    grid-column: 2/-1;
+    background-color: rgba(224,255,255,0.6);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+}
+.para-box p {
+    font-size: 22px;
+    color: black;
+    font-weight: bolder;
+}
+#about-me img{
+    max-height: 300px;
 }
