--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,9 @@ nav ul {
     height: 100%;
     border-radius: 20px;
 }
+.img-box a img:hover {
+    border: 5px solid darkmagenta;
+}
 .web-link {
     display: flex;
     justify-content: center;
